--- a/外观模式/外观模式.csproj
+++ b/外观模式/外观模式.csproj
@@ -43,6 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Apple.cs" />
+    <Compile Include="Banana.cs" />
+    <Compile Include="FruitFacade.cs" />
+    <Compile Include="IBase.cs" />
+    <Compile Include="IFruitFacade.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
